# web3

./: .gitignore  Cargo.toml  Dockerfile  README.md  requirements.txt  spec.yaml
algotrader-api/: Cargo.toml
algotrader-api/src/: endpoints.rs  path.rs  types.rs
algotrader-api/tests/: average_type_check.rs
algotrader-common/: Cargo.toml
algotrader-common/src/utils/: env_utils.rs
algotrader-frontend/: Cargo.toml  README.md  Trunk.toml  index.html
algotrader-frontend/src/: main.rs  route.rs  struct_app.rs
algotrader-frontend/src/stores/: mod.rs
algotrader-frontend/src/types/: mod.rs  props.rs
algotrader-frontend/src/utils/: api_utils.rs  mod.rs  ui_utils.rs
algotrader-frontend/src/view/: average.rs  avg.rs  coint.rs  cointegration.rs  composite.rs  header.rs  indi.rs  indicator.rs  markets.rs  mod.rs  ohlc.rs  plots.rs  select.rs  struct_markets.rs  trend.rs
algotrader-num/: Cargo.toml
algotrader-num/resources/py-func/: num_func.py
algotrader-num/resources/test/: BTC-USD-1DAY.json  ETH-USD-1DAY.json
algotrader-num/src/: lib.rs  num.rs  py.rs  types.rs
algotrader-num/tests/: num_check.rs  test_utils.rs
algotrader-ta/: Cargo.toml
algotrader-ta/resources/test/: BTC-USD-1DAY.json
algotrader-ta/src/: lib.rs  methods.rs  run_together.rs  sell_volatility.rs
algotrader-ta/tests/: run_together_check.rs  source_change_check.rs
algotrader-telegram/: Cargo.toml
algotrader-telegram/tests/: client_check.rs
algotrader-web3/: Cargo.toml
algotrader-web3-cli/: Cargo.toml
algotrader-web3-cli/src/: main.rs
algotrader-web3/src/: abigen_utils.rs  lib.rs  main.rs
algotrader-web3/src/eth/: types.rs
algotrader-web3/src/eth_abi/: mod.rs
conf/: configuration.yaml
data/: MSFT-1m.csv
data/fe/: BTC-USD-1DAY.json  markets.json
dydx-bot/: README.md
dydx/dydx-api/: Cargo.toml
dydx/dydx-api/src/: path.rs  types.rs
dydx/dydx-bot/: Cargo.toml  README.md
dydx/dydx-bot/postman/: dydx_bot_postman.json
dydx/dydx-bot/src/: lib.rs  main.rs
dydx/dydx-bot/src/api/: account.rs  analysis.rs  averages.rs  cointegration.rs  health.rs  history.rs  index.rs  mod.rs  model.rs  public.rs  routes.rs  ta.rs  tmpl.rs  trade.rs
dydx/dydx-bot/src/configuration/: mod.rs
dydx/dydx-bot/src/model/: app.rs
dydx/dydx-bot/src/service/: cointegration_ops.rs  dydx.rs  dydx_ops.rs  dydx_types.rs  mod.rs  utils.rs
dydx/dydx-bot/src/stats/: average.rs  indicator.rs  mod.rs  run_together.rs
dydx/dydx-bot/src/ta/: indicators.rs  methods.rs  mod.rs  run_together.rs
dydx/dydx-bot/templates/: base.html
dydx/dydx-bot/tests/: health_check.rs  utils_check.rs
dydx/dydx-common/: Cargo.toml
dydx/dydx-common/src/utils/: env_utils.rs  mod.rs  vec_utils.rs
dydx/dydx-frontend/: Cargo.toml  README.md  Trunk.toml  index.html
dydx/dydx-frontend/src/: api_utils.rs  capped_input_component.rs  client.rs  data_source.rs  env_utils.rs  gloonet.rs  main.rs  mock.rs  route.rs
dydx/dydx-frontend/src/utils/: api_utils.rs  mod.rs
dydx/dydx-frontend/src/view/: average.rs  composite.rs  header.rs  indicator.rs  mod.rs  ohlc.rs  sma.rs
dydx/dydx-ta/: Cargo.toml
dydx/dydx-ta/resources/test/: BTC-USD-1DAY.json
dydx/dydx-ta/src/: indicators.rs  lib.rs  methods.rs  ops.rs  run_together.rs  source_change.rs
dydx/dydx-ta/tests/: run_together_check.rs  source_change_check.rs  test_utils.rs
dydx/dydx-telegram/: Cargo.toml
dydx/dydx-telegram/src/: client.rs
dydx/dydx-telegram/tests/: client_check.rs
examples/dydx/: Cargo.toml
examples/dydx/src/: dydx_utils.rs  main.rs
examples/ethers/: Cargo.toml
examples/ethers/src/: abigen_utils.rs  main.rs  provider_utils.rs
examples/ethers/src/eth_abi/: mod.rs
examples/polars/: Cargo.toml
examples/polars/src/: main.rs  utils.rs
infra/kafka/: README.md
infra/postgres/: README.md  docker-compose.yml
infra/redis/: README.md
web3-common/: Cargo.toml
web3-common/src/utils/: env_utils.rs
web3-trader/: Cargo.toml  README.md
web3-trader/src/: configuration.rs  lib.rs  main.rs
web3-trader/src/api/: mod.rs
web3-trader/tests/: health_check.rs
