[workspace]
members = ["web3-trader", "examples/*"]
default-members = ["web3-trader"]
resolver = "2"

[workspace.dependencies]
actix-web = "4"
eyre = "0.6"
log = "0.4.14"
log4rs = "1.2.0"
reqwest = "0.11"

[workspace.dependencies.ethers]
version = "2.0"
features = ["rustls"]

[workspace.dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[workspace.package]
edition = "2021"
version = "0.0.1"
keywords = ["crypto", "web3", "trading"]
categories = ["web3"]
license = "MIT OR Apache-2.0"
exclude = [".github/", "bin/", "book/", "**/tests/", "**/test-data/", "**/testdata/", "examples", "scripts/"]
rust-version = "1.65"
