[workspace]
members = [
    "web3-trader",
    "algotrader-common",
    "algotrader-api",
    "dydx/dydx-ta",
    "dydx/dydx-bot",
    "dydx/dydx-frontend",
    "dydx/dydx-telegram",
    "examples/dydx",
    "examples/ethers",
    "examples/polars"
]
default-members = ["web3-trader"]
resolver = "2"

[workspace.dependencies]
config = "0.11"
actix-web = "4"
actix-files = "0.6"
tera = "1.19.0"
eyre = "0.6"
env_logger = "0.9"
log = "0.4.14"
log4rs = "1.2.0"
reqwest = "0.11"
chrono = "0.4.19"
plotters = "0.3.1"
clap = "2.33.3"
dialoguer = "0.8.0"
dydx-v3-rust = "0.2.3"
web3 = "0.19.0"
async-trait = "0.1.72"
dotenvy_macro = "0.15.7"
yata = "0.6.1"
serde_json = "1.0.64"

[workspace.dependencies.strum]
version = "0.25"
features = ["derive"]

[workspace.dependencies.polars]
version = "0.30.0"
features = ["describe", "lazy", "ndarray", "object", "dtype-struct", "concat_str", "mode"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.ethers]
version = "2.0"
features = ["rustls"]

[workspace.dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[workspace.package]
edition = "2021"
version = "0.0.1"
keywords = ["crypto", "web3", "trading"]
categories = ["web3"]
license = "MIT OR Apache-2.0"
exclude = [".github/", "bin/", "book/", "**/tests/", "**/test-data/", "**/testdata/", "examples", "scripts/"]
rust-version = "1.65"
