[package]
name = "algotrader-api"

[package.edition]
workspace = true

[package.version]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies]
strum = "0.25"
strum_macros = "0.25"

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
required-features = []
