[package]
name = "algotrader-common"

[package.edition]
workspace = true

[package.version]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.dotenvy_macro]
workspace = true

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
required-features = []
