[package]
name = "algotrader-frontend"

[package.edition]
workspace = true

[package.version]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.dotenvy_macro]
workspace = true

[dependencies]
algotrader-api = { version = "0.0.1", path = "../algotrader-api" }
algotrader-common = { version = "0.0.1", path = "../algotrader-common" }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
reqwest = { version = "0.11.18", features = ["json"] }
reqwasm = "0.5.0"
web-sys = { version = "0.3.36", features = ["HtmlSelectElement"]}
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.36"
yew-plotly = "0.2.0"
