[package]
name = "algotrader-web3-cli"

[package.edition]
workspace = true

[package.version]
workspace = true

[dependencies.yata]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.ethers]
features = ["rustls"]
workspace = true

[dependencies.eyre]
workspace = true

[dependencies.log]
workspace = true

[dependencies.log4rs]
workspace = true

[dependencies.tokio]
features = ["macros"]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.dialoguer]
workspace = true

[dependencies]
algotrader-common = { version = "0.0.1", path = "../algotrader-common" }
algotrader-web3 = { version = "0.0.1", path = "../algotrader-web3" }

[[bin]]
path = "src/main.rs"
name = "algotrader-web3-cli"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
required-features = []
