[package]
name = "dydx-frontend"

[package.edition]
workspace = true

[package.version]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.dotenvy_macro]
workspace = true

[dependencies]
dydx-api = { version = "0.0.1", path = "../dydx-api" }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.16"
gloo = "0.8"
gloo-net = "0.2"
web-sys = "0.3.57"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4"
strum = { version = "0.25", features = ["derive"] }
