[package]
name = "examples-ethers"
version = "0.0.0"
publish = false

license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
ethers = { workspace = true, features = ["rustls"] }
tokio = { workspace = true, features = ["macros"] }
eyre.workspace = true
log4rs.workspace = true
log.workspace = true